force-app/main/default/objects/Apttus_XApps__AppFile__c/Apttus_XApps__AppFile__c.object-meta.xml
<CustomObject>
    <description>Apttus X-Author for Excel™ Application Files for Check-in and Check-Out functionality</description>
    <label>App File</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>