force-app/main/default/objects/Apttus_XApps__AppFile__c/fields/Apttus_XApps__FileId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_XApps__FileId__c</fullName>
    <label>File ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>