force-app/main/default/objects/Apttus_XApps__AppFile__c/fields/Apttus_XApps__FileType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_XApps__FileType__c</fullName>
    <label>File Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>