force-app/main/default/objects/Apttus_XApps__AppFile__c/fields/Apttus_XApps__IsLocked__c.field-meta.xml
<CustomField>
    <fullName>Apttus_XApps__IsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>