force-app/main/default/objects/Apttus_XApps__AppFile__c/fields/Apttus_XApps__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_XApps__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>