force-app/main/default/objects/Apttus_XApps__AppFile__c/fields/Apttus_XApps__ParentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_XApps__ParentId__c</fullName>
    <label>Parent Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>