force-app/main/default/objects/Apttus_XApps__AppFile__c/listViews/Apttus_XApps__All.listView-meta.xml
<ListView>
    <fullName>Apttus_XApps__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_XApps__FileId__c</columns>
    <columns>Apttus_XApps__FileType__c</columns>
    <columns>Apttus_XApps__IsLocked__c</columns>
    <columns>Apttus_XApps__ObjectName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>